# ai_nutritiolog_bot

./: .dockerignore  DEPLOYMENT.md  DOCKER_QUICK_START.md  DOCKER_SUMMARY.md  Dockerfile  README.md  SETUP.md  db_utils.py  deploy.sh  docker-compose.yml  docker-swarm.yml  env.example  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0868174e045c_initial_migration_create_users_and_food_.py  64ef96158639_add_user_personal_parameters_for_.py
bot/: main.py
bot/config/: settings.py
bot/database/: connection.py
bot/database/models/: __init__.py  food_entry.py  user.py
bot/database/operations/: __init__.py  food_ops.py  user_ops.py
bot/handlers/: __init__.py  chat.py  diary.py  photo_analysis.py  profile.py  start.py  text_input.py  universal_food_input.py
bot/keyboards/: inline.py  profile.py
bot/middlewares/: user_middleware.py
bot/services/: food_input_agent.py  langgraph_service.py  nutrition_analyzer.py  nutrition_calculator.py  openai_service.py  redis_service.py
bot/utils/: helpers.py
