[project]
name = "ai-nutritiolog-bot"
version = "0.1.0"
description = "AI Nutrition Telegram Bot with OpenAI integration"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.19.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.10",
    "greenlet>=3.2.3",
    "langgraph>=0.2.40",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-redis>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
] 
