[project]
name = "ai-nutritiolog-bot"
version = "0.1.0"
description = "AI Nutrition Telegram Bot with OpenAI integration"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.19.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.10",
    "greenlet>=3.2.3",
    "langgraph>=0.2.40",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-redis>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
] 

# Ruff configuration
[tool.ruff]
# Set the maximum line length to 88 (black's default)
line-length = 88

# Exclude specific files and directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "alembic/versions",
    "migrations",
]

# Set target Python version
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Additionally enable:
# - isort (`I`) for import sorting
# - pyupgrade (`UP`) for syntax upgrades
# - flake8-bugbear (`B`) for likely bugs
# - flake8-simplify (`SIM`) for code simplification
# - flake8-comprehensions (`C4`) for comprehension improvements
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':' (conflicts with black)
]

[tool.ruff.lint.isort]
# Group imports by type
known-first-party = ["bot"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces instead of tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false 
